# neutrino

./: .clangd  .gitignore  CMakeLists.txt
apps/brix/: CMakeLists.txt  main.cc
apps/brix/rc/: bi_loader.cc  bi_loader.hh  game_assets.cc  game_assets.hh  map.hh  objects.cc  objects.hh  rc.cc  rc.hh  resource_loader.hh  resource_type.hh
apps/cc/: CMakeLists.txt  cc_application.cc  cc_application.hh  factory.cc  factory.hh  main.cc  tile_names.cc  tile_names.hh  tmx_export.cc  tmx_export.hh
apps/cc/data_loader/: data_directory.cc  data_directory.hh  data_manager.cc  data_manager.hh  load_picture.cc  load_picture.hh  map_tile.hh  raw_level_map.cc  raw_level_map.hh  raw_map.cc  raw_map.hh  text_resource.cc  text_resource.hh  text_resource_loader.cc  text_resource_loader.hh
apps/cc/data_loader/crystal_caves/: cc1_text_resources.hh  cc_decode.cc  cc_decode.hh  cc_level_loader.cc  cc_level_loader.hh  cc_map_cell.hh  cc_tile_ids.hh  cc_tile_names.hh  cc_tiles.json  cc_tiles_mapping.hh  crystal_caves.cc  crystal_caves.hh
apps/cc/data_loader/secret_agent/: sa_decode.cc  sa_decode.hh  sa_key.cc  sa_key.hh  sa_tiles_mapping.hh  secret_agent.cc  secret_agent.hh
apps/cc/level/: cc_world_mapper.cc  cc_world_mapper.hh  ecs_registry.cc  ecs_registry.hh  global_state.cc  global_state.hh  hud.cc  hud.hh  level.cc  level.hh  maps_registry.cc  maps_registry.hh  player_flags.hh  user_input.cc  user_input.hh
apps/cc/level/components/: component_player.hh
apps/cc/level/crystal_caves/: crystal_caves_hud.cc  crystal_caves_hud.hh  crystal_caves_map.cc  (+4 more)
apps/cc/level_viewer/: editor_context.cc  editor_context.hh  level_editor_ui.cc  level_editor_ui.hh  level_viewer_app.cc  level_viewer_app.hh  main_menu.cc  main_menu.hh  tiles_holder.cc  tiles_holder.hh  tiles_selector_widget.cc  tiles_selector_widget.hh
apps/cc/properties/: background_tile.hh  map_tile.cc  map_tile.hh  sprite_seq.hh  tile_type.hh
apps/cc/props_editor/: editor_context.cc  editor_context.hh  main_menu.cc  main_menu.hh  objects.yml  props_editor_app.cc  props_editor_app.hh  props_editor_ui.cc  props_editor_ui.hh  sprite_names.hh  sprites_editor_widget.cc  sprites_editor_widget.hh  tiles_selector_widget.cc  tiles_selector_widget.hh
apps/cc/scenes/: cc_main_map.cc  cc_main_map.hh  dialog_box.cc  dialog_box.hh  dialogs.cc  dialogs.hh  main_level_scene.cc  main_level_scene.hh  main_map_scene.cc  main_map_scene.hh  main_screen_scene.cc  main_screen_scene.hh  scenes_registry.cc  scenes_registry.hh  title_scene.cc  title_scene.hh
apps/hal_demo/: CMakeLists.txt  hal-demo.cc
apps/sdl_demo/: CMakeLists.txt  blob.cc  bobs.cc  demoscene.hh  fire.cc  main.cc  plasma.cc  stars.cc
apps/tmx/: CMakeLists.txt  load_tmx.cc
apps/tmx/map/: demo.tmx  formosa.tmx  map_city.tmx
examples/map_viewer/: CMakeLists.txt  map_viewer.cc
examples/sprite_demo/: CMakeLists.txt  sprite_demo.cc
examples/sprite_demo/assets/: ASSET_SOURCE.txt
ext/: CMakeLists.txt
ext/assets/: CMakeLists.txt
ext/bitflags/: CMakeLists.txt
ext/brotli/: CMakeLists.txt
ext/bz2/: CMakeLists.txt
ext/callable_traits/: CMakeLists.txt
ext/cista/: CMakeLists.txt
ext/dence_hash_map/: CMakeLists.txt
ext/doctest/: CMakeLists.txt
ext/double-conversion/: CMakeLists.txt
ext/dr_imgui/: CMakeLists.txt
ext/freetype/: CMakeLists.txt  freetype.patch
ext/glad/: CMakeLists.txt
ext/glm/: CMakeLists.txt
ext/mio/: CMakeLists.txt
ext/nlohmann/: CMakeLists.txt
ext/pfr/: CMakeLists.txt
ext/png/: CMakeLists.txt  png.patch
ext/pugixml/: CMakeLists.txt
ext/rapid-yaml/: CMakeLists.txt
ext/re2c/: CMakeLists.txt
ext/sdl2/: CMakeLists.txt
ext/sdl_ttf/: CMakeLists.txt
ext/sdlpp/: CMakeLists.txt
ext/strong_type/: CMakeLists.txt
ext/vfs/: CMakeLists.txt
ext/yaml/: CMakeLists.txt
ext/zlib/: CMakeLists.txt  zlib.patch
test/: CMakeLists.txt  main.cc  test_application.hh  test_main.cc  test_neutrino.cc
test/assets/: test_unique_resource.cc
test/assets/bitmask/: bitmask_test_getter_setter.cc  bitmask_test_overlap.cc  bitmask_test_sr.cc  bitmask_test_utils.cc  bitmask_test_utils.hh
test/audio/: test_audio.cc
test/detail/: test_content_hash.cc  test_hash.cc
test/ecs/: test_bi_map.cc  test_component_bucket.cc  test_ecs_registry.cc  test_sorted_array.cc
test/engine/: test_ecs_registry.cc  test_message_broker.cc  test_observer_subject.cc  test_sparse_set.cc
test/ini/: test_ini.cc
test/input/: test_input.cc
test/physics/: test_aabb_tree.cc  test_collide.cc  test_enclose.cc  test_grid.cc  test_sorted_array.cc  test_triangle.cc  test_units.cc  test_world.cc  test_world_carriers.cc  test_world_entity_dedup.cc  test_world_footing.cc  test_world_grid.cc  test_world_multihit.cc  test_world_queries.cc  test_world_run.cc  test_world_slide.cc  test_world_snap.cc  test_world_stepup.cc  test_world_swept_triggers.cc
test/quad_tree/: quad_tree_test.cc
test/s11n/: test_s11n.cc
test/utils/: fpe_test.cc  string_constant_test.cc  string_tokenizer_test.cc  string_utils_test.cc  test_constexpr_for.cc  test_fsm.cc  test_fsm_complex.cc  test_id.cc  test_ini.cc  test_introspection.cc  test_lru.cc  test_on_of.cc  test_sorted_array.cc  test_type_list.cc  test_type_name.cc
test/utils/io/: base_64_test.cc  binary_reader_writer.cc  memory_stream.cc  zlib_test.cc
test/utils/math/: test_quad_tree.cc
test/utils/strings/: number_formatter_test.cc  string_constant_test.cc  string_tokenizer_test.cc  string_utils_test.cc  test_numeric_string.cc
test/video/: test_atlas_loader.cc  test_atlas_packer.cc  test_bitmask.cc  test_cpu_sprites_atlas.cc  test_cpu_texture_atlas.cc  test_draw.cc  test_images.hh  test_sprite_animation.cc  test_sprite_cache.cc  test_sprite_def.cc  test_sprite_set.cc  test_sprite_sheet.cc  test_sprite_state.cc  test_sprites.cc  test_window_presentation.cc
test/video/world/: test_cameras.hh  test_resource_cache.cc  test_resource_cache_core.cc  test_sprite_batch.cc  test_tileset_bundle.cc  test_world_camera.cc  test_world_compositor.cc  test_world_draw.cc  test_world_renderer.cc
test/world/: test_tile_resolution.cc  test_tmx_loader.cc
(+1253 files in other folders)
