set(BUILD_SHARED_LIBS OFF CACHE INTERNAL "")
set(CMAKE_DISABLE_FIND_PACKAGE_ZLIB OFF CACHE INTERNAL "")
set(CMAKE_DISABLE_FIND_PACKAGE_BZip2 OFF CACHE INTERNAL "")
set(CMAKE_DISABLE_FIND_PACKAGE_PNG OFF CACHE INTERNAL "")
set(CMAKE_DISABLE_FIND_PACKAGE_HarfBuzz OFF CACHE INTERNAL "")
set(CMAKE_DISABLE_FIND_PACKAGE_BrotliDec OFF CACHE INTERNAL "")
set(FT_WITH_ZLIB OFF CACHE INTERNAL "")
set(FT_WITH_BZIP2 OFF CACHE INTERNAL "")
set(FT_WITH_PNG OFF CACHE INTERNAL "")
set(FT_WITH_HARFBUZZ OFF CACHE INTERNAL "")
set(FT_WITH_BROTLI OFF CACHE INTERNAL "")

FetchContent_Declare (
        freetype
        GIT_REPOSITORY "https://gitlab.freedesktop.org/freetype/freetype.git"
        GIT_TAG master
        UPDATE_COMMAND ""
        PATCH_COMMAND   git apply ${CMAKE_CURRENT_SOURCE_DIR}/freetype.patch
)

FetchContent_MakeAvailable(freetype)
add_library(thirdparty::freetype ALIAS freetype)


SET_TARGET_PROPERTIES(freetype PROPERTIES FOLDER "ThirdParty")
